apps/base/open-webui/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: open-webui
  namespace: open-webui
spec:
  ingressClassName: cilium
  rules:
    - host: "cwk.open-webui"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: open-webui
                port:
                  number: 8080
